fix: helper text spacing on error

--- a/packages/components/src/components/checkbox/checkbox.css
+++ b/packages/components/src/components/checkbox/checkbox.css
@@ -132,7 +132,7 @@ scale-checkbox [part='helper-text'] {
   font-weight: var(--font-weight-helper-text);
   color: var(--color-helper-text);
   padding-left: calc(
-    var(--width-control) + var(--spacing-x) + var(--border-width-control) * 2
+    var(--width-control) + var(--spacing-control) + var(--spacing-x) + calc(var(--border-width-control) * 2)
   );
   display: flex;
   align-items: center;
@@ -249,7 +249,8 @@ scale-checkbox.error [part='helper-text'] scale-icon-alert-error {
 
 /* :host(.error) [part='checkbox'], */
 scale-checkbox.error [part='checkbox'] {
-  border: 2px solid var(--color-error);
+  --border-width-control: var(--telekom-spacing-unit-x05);
+  border: var(--border-width-control) solid var(--color-error);
 }
 
 scale-checkbox.error
@@ -279,6 +280,13 @@ scale-checkbox.error:not(.checked) [part='container']:active [part='checkbox'] {
 scale-checkbox.checked.error [part='container']:hover [part='checkbox'] {
   border: 2px solid var(--telekom-color-functional-danger-hovered);
 }
+
+scale-checkbox.error [part='helper-text'] {
+  padding-left: calc(
+    var(--width-control) + var(--spacing-control) + var(--spacing-x) + 4px
+  );
+}
+
 
 /* disabled states */
 
